<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.hakjuoh</groupId>
    <artifactId>protege-mcp-parent</artifactId>
    <version>0.7.0</version>
    <packaging>pom</packaging>
    <name>protege-mcp reactor</name>

    <modules>
        <module>core</module>
        <module>plugin</module>
        <module>cli</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Java 17 is required: the MCP SDK 2.0.0 public types (Tool, CallToolRequest,
             SyncToolSpecification, ...) are records, so referencing them needs java.lang.Record
             (Java 16+) on the compile bootclasspath; the embedded MCP/Jetty bytecode is Java 17;
             and the plugin's OSGi manifest carries Require-Capability osgi.ee=JavaSE 17. Protege must
             therefore be launched on a Java 17+ JVM. See README.md "Runtime requirements". -->
        <maven.compiler.release>17</maven.compiler.release>

        <!-- Consumed at provided scope by the plugin (all four; the Protege / OWLAPI OSGi runtime
             supplies them) and core (owlapi only); the CLI shades OWLAPI into its executable jar
             instead. -->
        <protege.version>5.6.6</protege.version>
        <owlapi.version>4.5.29</owlapi.version>
        <guava.version>18.0</guava.version>
        <slf4j.version>1.7.36</slf4j.version>

        <!-- embedded MCP stack (versions exactly as resolved by the MCP 2.0.0 dependency tree).
             snakeyaml/reactivestreams/itu arrive transitively; their properties here are
             documentation-only pins of the embedded stack. -->
        <mcp.version>2.0.0</mcp.version>
        <jackson.version>2.20.1</jackson.version>
        <snakeyaml.version>2.4</snakeyaml.version>
        <reactor.version>3.7.0</reactor.version>
        <reactivestreams.version>1.0.4</reactivestreams.version>
        <jsv.version>2.0.0</jsv.version>
        <itu.version>1.14.0</itu.version>

        <!-- embedded Jakarta-Servlet-6 host -->
        <jetty.version>12.0.18</jetty.version>
        <jakarta.servlet.version>6.1.0</jakarta.servlet.version>

        <!-- embedded SPARQL engine (Apache Jena ARQ) for the sparql_query tool -->
        <jena.version>4.10.0</jena.version>

        <!-- W3C RDFC-1.0 implementation used for the cross-application RDF dataset digest.
             Keep this distinct from fingerprint v2: RDFC identifies an RDF dataset; the existing
             OWL contract digest remains the optimistic workspace/revision token. -->
        <!-- 2.0.0 is the newest Java-17-compatible release (Java 8 bytecode). 3.x requires
             Java 21/classfile 65, while Protégé 5.6.6 and this plugin explicitly support Java 17.
             Do not switch this with a build-JDK-activated Maven profile: Titanium is embedded in
             the plugin and CLI, so doing so would silently change the runtime requirement and
             contents of the same project artifact depending on which JDK built it. -->
        <titanium.rdfc.version>2.0.0</titanium.rdfc.version>

        <!-- Markdown renderer for the Ontology Assistant transcript (zero-dependency, BSD-2-Clause) -->
        <commonmark.version>0.29.0</commonmark.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Align every jackson-* module (including the transitive jackson-dataformat-yaml pulled
                 in by json-schema-validator, which otherwise resolves two minors behind jackson-databind)
                 to a single release train. This removes the version skew rather than leaving it to
                 nearest-wins mediation, per Jackson's same-minor guidance. -->
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <!-- Fail fast when ${maven.multiModuleProjectDirectory} does not point at the repository
                 root. The plugin runs its tests with this property as the working directory (see
                 .mvn/extensions.xml); a wrong or relative value re-roots that working directory and
                 fails the tests that read repo-root fixtures (docs/tools, docs/examples,
                 plugin/src/test/resources/contracts) with misleading missing-file errors.
                 A relative value cannot false-pass: enforcer aligns relative <file> entries to each
                 module basedir, so the first module fails the rule. Accepted limits of this rule
                 (reviewed; do not re-chase): (1) requireFilesExist canonicalizes, so a checkout
                 reached through a symlinked or case-variant path fails loudly even though the build
                 would be correct — the message below gives the workaround; (2) deliberately pointing
                 MAVEN_BASEDIR or -Dmaven.multiModuleProjectDirectory at ANOTHER protege-mcp clone
                 passes the rule and builds that clone's sources — deliberate overrides are outside
                 this guard's threat model; (3) a tree copied without its .mvn directory always fails,
                 by design (module-dir builds of such a tree were the original silent failure). -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.6.3</version>
                <executions>
                    <execution>
                        <id>require-reactor-root-anchor</id>
                        <goals><goal>enforce</goal></goals>
                        <configuration>
                            <rules>
                                <requireFilesExist>
                                    <files>
                                        <file>${maven.multiModuleProjectDirectory}/.mvn/extensions.xml</file>
                                    </files>
                                    <message>maven.multiModuleProjectDirectory does not resolve to the
                                        repository root (the directory containing .mvn/extensions.xml).
                                        Building with a wrong or relative value would run the plugin's
                                        tests with the wrong working directory and fail them with
                                        misleading missing-file errors. Launch Maven from a checkout that
                                        still contains the .mvn directory and do not override this
                                        property. If your checkout path goes through a symlink (or a
                                        case-variant path), build from the physical path (`cd "$(pwd -P)"`)
                                        or run `mvn -f pom.xml ...`, which anchors to the physical
                                        path.</message>
                                </requireFilesExist>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
